--- a/manuscripts/24-lmtp-coop-church/v5-man-lmtp-ow-coop-church.qmd
+++ b/manuscripts/24-lmtp-coop-church/v5-man-lmtp-ow-coop-church.qmd
@@ -72,7 +72,7 @@ pull_path <-
 
 
 push_mods <-  fs::path_expand(
-  "/Users/joseph/Library/CloudStorage/Dropbox-v-project/data/nzvs_mods/24/church-prosocial-v6"
+  "/Users/joseph/Library/CloudStorage/Dropbox-v-project/data/nzvs_mods/24/church-prosocial-v7"
 )
 
 
@@ -88,13 +88,14 @@ library(gtsummary)
 # # WARNING:  COMMENT THIS OUT. JB DOES THIS FOR WORKING WITHOUT WIFI
 # source("/Users/joseph/GIT/templates/functions/funs.R")
 
-# ALERT: UNCOMMENT THIS AND DOWNLOAD THE FUNCTIONS FROM JB's GITHUB
-# source(
-#   "https://raw.githubusercontent.com/go-bayes/templates/main/functions/experimental_funs.R"
-# )
+#ALERT: UNCOMMENT THIS AND DOWNLOAD THE FUNCTIONS FROM JB's GITHUB
 
 # source(
 #   "https://raw.githubusercontent.com/go-bayes/templates/main/functions/experimental_funs.R"
+# )
+# 
+# source(
+#   "https://raw.githubusercontent.com/go-bayes/templates/main/functions/funs.R"
 # )
 
 # check path:is this correct?  check so you know you are not overwriting other directors
@@ -111,7 +112,7 @@ loadfonts(device = "all")
 
 ## Read in data from analysis 
 # imports
-n_participants <-  margot::here_read("n_participants")
+n_participants <- readRDS(here::here(push_mods, "n_participants"))
 n_total <-  margot::here_read("n_total")
 
 #n_participants
@@ -220,14 +221,14 @@ mean_donations <- margot::here_read("mean_donations")
 # import models
 
 # population mean
-t2_charity_donate_z_null <- here_read("t2_charity_donate_z_null")
+t2_charity_donate_z_null <- margot::here_read("t2_charity_donate_z_null")
 
 # individual models
-t2_charity_donate_z_zero <- here_read("t2_charity_donate_z_zero")
-t2_charity_donate_z_gain <- here_read("t2_charity_donate_z_gain")
-t2_hours_charity_z_gain <-  here_read("t2_hours_charity_z_gain")
-t2_hours_charity_z_zero <- here_read("t2_hours_charity_z_zero")
-t2_hours_charity_z_null<- here_read("t2_hours_charity_z_null")
+t2_charity_donate_z_zero <- margot::here_read("t2_charity_donate_z_zero")
+t2_charity_donate_z_gain <- margot::here_read("t2_charity_donate_z_gain")
+t2_hours_charity_z_gain <-  margot::here_read("t2_hours_charity_z_gain")
+t2_hours_charity_z_zero <- margot::here_read("t2_hours_charity_z_zero")
+t2_hours_charity_z_null<- margot::here_read("t2_hours_charity_z_null")
 
 
 
@@ -1682,8 +1683,6 @@ contrast_charity <-
   lmtp::lmtp_contrast(t2_charity_donate_z_gain , ref =  t2_charity_donate_z_zero, type = "additive")
 contrast_volunteer <-
   lmtp::lmtp_contrast(t2_hours_charity_z_gain , ref =  t2_hours_charity_z_zero, type = "additive")
-
-
 
 
 b_church_on_hours_charity<-margot::here_read("b_church_on_hours_charity")
