added anonymous manuscript for pub
and made some fixes

--- a/manuscripts/24-lmtp-coop-church/24_no_name_lmtp_coop_church.qmd
+++ b/manuscripts/24-lmtp-coop-church/24_no_name_lmtp_coop_church.qmd
@@ -1449,20 +1449,27 @@ However, even within New Zealand, much remains to be discovered. We have not att
 
 ### Ethics
 
-The University of Auckland Human Participants Ethics Committee reviews the NZAVS every three years. Our most recent ethics approval statement is as follows: The New Zealand Attitudes and Values Study was approved by the University of Auckland Human Participants Ethics Committee on 26/05/2021 for six years until 26/05/2027, Reference Number UAHPEC22576.
+<!-- The University of Auckland Human Participants Ethics Committee reviews the NZAVS every three years. Our most recent ethics approval statement is as follows: The New Zealand Attitudes and Values Study was approved by the University of Auckland Human Participants Ethics Committee on 26/05/2021 for six years until 26/05/2027, Reference Number UAHPEC22576. -->
 
+ (*blinded) 
 
 ### Data Availability
 
-The data described in the paper are part of the New Zealand Attitudes and Values Study (NZAVMembers of the NZAVS management team and research group hold full copies of the NZAVS data. A de-identified dataset containing only the variables analysed in this manuscript is available upon request from the corresponding author or any member of the NZAVS advisory board for replication or checking of any published study using NZAVS data. The code for the analysis can be found at: [https://github.com/go-bayes/models/blob/main/scripts/24-bulbulia-church-prosocial.R](https://github.com/go-bayes/models/blob/main/scripts/24-bulbulia-church-prosocial.R). 
+ (*blinded) 
+ 
+<!-- The data described in the paper are part of the New Zealand Attitudes and Values Study (NZAVMembers of the NZAVS management team and research group hold full copies of the NZAVS data. A de-identified dataset containing only the variables analysed in this manuscript is available upon request from the corresponding author or any member of the NZAVS advisory board for replication or checking of any published study using NZAVS data. The code for the analysis can be found at: [https://github.com/go-bayes/models/blob/main/scripts/24-bulbulia-church-prosocial.R](https://github.com/go-bayes/models/blob/main/scripts/24-bulbulia-church-prosocial.R).  -->
 
 
-<!-- ### Acknowledgements -->
+### Acknowledgements
+
+ (*blinded) 
 
 <!-- The New Zealand Attitudes and Values Study is supported by a grant from the Templeton Religious Trust (TRT0196; TRT0418). JB received support from the Max Planck Institute for the Science of Human History. The funders had no role in preparing the manuscript or deciding to publish it. -->
 
 
-<!-- ### Author Statement -->
+### Author Statement
+
+ (*blinded) 
 
 <!-- JB conceived the study and approach. CS led NZAVS data collection. All authors contributed to the manuscript. -->
 
