--- a/manuscripts/24-lmtp-coop-church/24_no_name_lmtp_coop_church.tex
+++ b/manuscripts/24-lmtp-coop-church/24_no_name_lmtp_coop_church.tex
@@ -837,7 +837,7 @@ practice across society.
 
 \centering{
 
-\includegraphics{24-bulbulia-lmtp-coop-church_files/figure-pdf/fig-hist-1.pdf}
+\includegraphics{24_no_name_lmtp_coop_church_files/figure-pdf/fig-hist-1.pdf}
 
 }
 
@@ -1109,7 +1109,7 @@ volunteering minutes compared with the status quo.}
 
 \centering{
 
-\includegraphics{24-bulbulia-lmtp-coop-church_files/figure-pdf/fig-1_1-1.pdf}
+\includegraphics{24_no_name_lmtp_coop_church_files/figure-pdf/fig-1_1-1.pdf}
 
 }
 
@@ -1339,7 +1339,7 @@ overturn it. We infer \textbf{evidence for causality}.
 
 \centering{
 
-\includegraphics{24-bulbulia-lmtp-coop-church_files/figure-pdf/fig-study2-1.pdf}
+\includegraphics{24_no_name_lmtp_coop_church_files/figure-pdf/fig-study2-1.pdf}
 
 }
 
@@ -1569,7 +1569,7 @@ causality is not reliable}.
 
 \centering{
 
-\includegraphics{24-bulbulia-lmtp-coop-church_files/figure-pdf/fig-study_3-1.pdf}
+\includegraphics{24_no_name_lmtp_coop_church_files/figure-pdf/fig-study_3-1.pdf}
 
 }
 
@@ -1978,22 +1978,19 @@ interaction, and causal mediation}.
 
 \subsubsection{Ethics}\label{ethics}
 
-The University of Auckland Human Participants Ethics Committee reviews
-the NZAVS every three years. Our most recent ethics approval statement
-is as follows: The New Zealand Attitudes and Values Study was approved
-by the University of Auckland Human Participants Ethics Committee on
-26/05/2021 for six years until 26/05/2027, Reference Number UAHPEC22576.
+(*blinded)
 
 \subsubsection{Data Availability}\label{data-availability}
 
-The data described in the paper are part of the New Zealand Attitudes
-and Values Study (NZAVMembers of the NZAVS management team and research
-group hold full copies of the NZAVS data. A de-identified dataset
-containing only the variables analysed in this manuscript is available
-upon request from the corresponding author or any member of the NZAVS
-advisory board for replication or checking of any published study using
-NZAVS data. The code for the analysis can be found at:
-\url{https://github.com/go-bayes/models/blob/main/scripts/24-bulbulia-church-prosocial.R}.
+(*blinded)
+
+\subsubsection{Acknowledgements}\label{acknowledgements}
+
+(*blinded)
+
+\subsubsection{Author Statement}\label{author-statement}
+
+(*blinded)
 
 \newpage{}
 
@@ -2787,7 +2784,7 @@ effect). See VanderWeele \emph{et al.}
 
 \centering{
 
-\includegraphics{24-bulbulia-lmtp-coop-church_files/figure-pdf/fig-match_1-1.pdf}
+\includegraphics{24_no_name_lmtp_coop_church_files/figure-pdf/fig-match_1-1.pdf}
 
 }
 
