fixed missing authors in manuscript

--- a/manuscripts/24-lmtp-coop-church/24-bulbulia-lmtp-coop-church.qmd
+++ b/manuscripts/24-lmtp-coop-church/24-bulbulia-lmtp-coop-church.qmd
@@ -2,6 +2,24 @@
 title: "Causal Effects of Religious Service Attendance on Charity and Volunteering: Evidence Using Novel Measures From A National Longitudinal Panel"
 abstract: |
    Causal investigations for the effects of religion on prosociality must be precise. One should articulate a specific causal contrast for a feature of religion, select appropriate prosociality measures, define the target population, gather time-series data, and, only after identification assumptions are met, conduct statistical and sensitivity analyses. Here, we examine three distinct interventions on religious service attendance (increase, decrease, maintain) in a longitudinal sample of 33,198 New Zealanders (years 2018 to 2021). Study 1 investigates effects of religious service on charitable contributions and volunteerism. Studies 2 and 3 investigate effects of religious service on the relative risks of *receiving* aid or financial support from others during the past week -- measures designed to minimise self-reporting bias. Across all studies, inferred causal effects are substantially less pronounced than observed cross-sectional associations. Nonetheless, regular attendance across the population would enhance charitable donations by 4% of the New Zealand Government's annual spending. This research underscores the essential role of formulating precise causal questions and recommends a workflow for answering them in the scientific study of cultural practices.
+author: 
+  - name: Joseph A. Bulbulia
+    affiliation: Victoria University of Wellington, New Zealand
+    orcid_id: 0000-0002-5861-2056
+    email: joseph.bulbulia@vuw.ac.nz
+    corresponding: yes
+  - name: Don E Davis
+    affiliation: Georgia State University
+    orcid_id: 0000-0003-3169-6576 
+  - name: Kenneth G. Rice
+    affiliation: Georgia State University 
+    orcid_id: 0000-0002-0558-2818
+  - name: Chris G. Sibley
+    affiliation: School of Psychology, University of Auckland
+    orcid_id: 0000-0002-4064-8800
+  - name: Geoffrey Troughton
+    affiliation: Victoria University of Wellington
+    orcid_id: 0000-0001-7423-0640
 keywords:
   - Causal Inference
   - Charity
@@ -1457,14 +1475,14 @@ The University of Auckland Human Participants Ethics Committee reviews the NZAVS
 The data described in the paper are part of the New Zealand Attitudes and Values Study (NZAVMembers of the NZAVS management team and research group hold full copies of the NZAVS data. A de-identified dataset containing only the variables analysed in this manuscript is available upon request from the corresponding author or any member of the NZAVS advisory board for replication or checking of any published study using NZAVS data. The code for the analysis can be found at: [https://github.com/go-bayes/models/blob/main/scripts/24-bulbulia-church-prosocial.R](https://github.com/go-bayes/models/blob/main/scripts/24-bulbulia-church-prosocial.R). 
 
 
-<!-- ### Acknowledgements -->
+### Acknowledgements
 
-<!-- The New Zealand Attitudes and Values Study is supported by a grant from the Templeton Religious Trust (TRT0196; TRT0418). JB received support from the Max Planck Institute for the Science of Human History. The funders had no role in preparing the manuscript or deciding to publish it. -->
+The New Zealand Attitudes and Values Study is supported by a grant from the Templeton Religious Trust (TRT0196; TRT0418). JB received support from the Max Planck Institute for the Science of Human History. The funders had no role in preparing the manuscript or deciding to publish it.
 
 
-<!-- ### Author Statement -->
+### Author Statement
 
-<!-- JB conceived the study and approach. CS led NZAVS data collection. All authors contributed to the manuscript. -->
+JB conceived the study and approach. CS led NZAVS data collection. All authors contributed to the manuscript.
 
 
 {{< pagebreak >}}
