--- a/manuscripts/24-lmtp-coop-church/24-bulbulia-lmtp-coop-church.tex
+++ b/manuscripts/24-lmtp-coop-church/24-bulbulia-lmtp-coop-church.tex
@@ -175,6 +175,7 @@
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
   pdftitle={Causal Effects of Religious Service Attendance on Charity and Volunteering: Evidence Using Novel Measures From A National Longitudinal Panel},
+  pdfauthor={Joseph A. Bulbulia; Don E Davis; Kenneth G. Rice; Chris G. Sibley; Geoffrey Troughton},
   pdfkeywords={Causal
 Inference, Charity, Church, Cooperation, Cross-validation, Machine
 Learning, Nonparametric, Religion, Volunteering},
@@ -188,7 +189,8 @@ Learning, Nonparametric, Religion, Volunteering},
 \title{Causal Effects of Religious Service Attendance on Charity and
 Volunteering: Evidence Using Novel Measures From A National Longitudinal
 Panel}
-\author{}
+\author{Joseph A. Bulbulia \and Don E Davis \and Kenneth G.
+Rice \and Chris G. Sibley \and Geoffrey Troughton}
 \date{2024-04-21}
 
 \begin{document}
@@ -1995,6 +1997,19 @@ advisory board for replication or checking of any published study using
 NZAVS data. The code for the analysis can be found at:
 \url{https://github.com/go-bayes/models/blob/main/scripts/24-bulbulia-church-prosocial.R}.
 
+\subsubsection{Acknowledgements}\label{acknowledgements}
+
+The New Zealand Attitudes and Values Study is supported by a grant from
+the Templeton Religious Trust (TRT0196; TRT0418). JB received support
+from the Max Planck Institute for the Science of Human History. The
+funders had no role in preparing the manuscript or deciding to publish
+it.
+
+\subsubsection{Author Statement}\label{author-statement}
+
+JB conceived the study and approach. CS led NZAVS data collection. All
+authors contributed to the manuscript.
+
 \newpage{}
 
 \subsection{Appendix A: Measures}\label{appendix-measures}
@@ -3033,7 +3048,7 @@ applications is unnecessary. \emph{JAMA}, \textbf{331}(4), 285--286.
 Hernán, MA, Sauer, BC, Hernández-Díaz, S, Platt, R, and Shrier, I (2016)
 Specifying a target trial prevents immortal time bias and other
 self-inflicted injuries in observational analyses. \emph{Journal of
-Clinical Epidemiology}, \textbf{79}, 7075.
+Clinical Epidemiology}, \textbf{79}, 70--75.
 
 \bibitem[\citeproctext]{ref-hoffman2023}
 Hoffman, KL, Salazar-Barreto, D, Rudolph, KE, and Díaz, I (2023)
@@ -3066,11 +3081,12 @@ Mission Research}, \textbf{46}(2), 272--275.
 \bibitem[\citeproctext]{ref-johnson2005}
 Johnson, DD (2005) God{'}s punishment and public goods: A test of the
 supernatural punishment hypothesis in 186 world cultures. \emph{Human
-Nature}, \textbf{16}, 410446.
+Nature}, \textbf{16}, 410--446.
 
 \bibitem[\citeproctext]{ref-johnson2015}
 Johnson, DD (2015) Big gods, small wonder: Supernatural punishment
-strikes back. \emph{Religion, Brain \& Behavior}, \textbf{5}(4), 290298.
+strikes back. \emph{Religion, Brain \& Behavior}, \textbf{5}(4),
+290--298.
 
 \bibitem[\citeproctext]{ref-jost_end_2006-1}
 Jost, JT (2006) The end of the end of ideology. \emph{American
@@ -3231,7 +3247,7 @@ worker survivor effect. \emph{Mathematical Modelling}, \textbf{7}(9-12),
 \bibitem[\citeproctext]{ref-robins1992}
 Robins, JM, and Greenland, S (1992) Identifiability and exchangeability
 for direct and indirect effects. \emph{Epidemiology}, \textbf{3}(2),
-143155.
+143--155.
 
 \bibitem[\citeproctext]{ref-robins2010alternative}
 Robins, JM, and Richardson, TS (2010) Alternative graphical causal
@@ -3355,7 +3371,7 @@ VanderWeele, TJ (2017) Causal effects of religious service attendance?
 
 \bibitem[\citeproctext]{ref-vanderweele2019}
 VanderWeele, TJ (2019) Principles of confounder selection.
-\emph{European Journal of Epidemiology}, \textbf{34}(3), 211219.
+\emph{European Journal of Epidemiology}, \textbf{34}(3), 211--219.
 
 \bibitem[\citeproctext]{ref-vanderweele2021can}
 VanderWeele, TJ (2021a) Can sophisticated study designs with regression
@@ -3377,7 +3393,7 @@ doi:\href{https://doi.org/10.7326/M16-2607}{10.7326/M16-2607}.
 \bibitem[\citeproctext]{ref-vanderweele2013}
 VanderWeele, TJ, and Hernan, MA (2013) Causal inference under multiple
 versions of treatment. \emph{Journal of Causal Inference},
-\textbf{1}(1), 120.
+\textbf{1}(1), 1--20.
 
 \bibitem[\citeproctext]{ref-vanderweele2012MEASUREMENT}
 VanderWeele, TJ, and Hernán, MA (2012) Results on differential and
@@ -3416,7 +3432,7 @@ doi:\href{https://doi.org/10.1093/aje/kwp436}{10.1093/aje/kwp436}.
 \bibitem[\citeproctext]{ref-westreich2013}
 Westreich, D, and Greenland, S (2013) The table 2 fallacy: Presenting
 and interpreting confounder and modifier coefficients. \emph{American
-Journal of Epidemiology}, \textbf{177}(4), 292298.
+Journal of Epidemiology}, \textbf{177}(4), 292--298.
 
 \bibitem[\citeproctext]{ref-wheatley1971}
 Wheatley, P (1971) \emph{The pivot of the four quarters : A preliminary
@@ -3427,8 +3443,8 @@ Edinburgh University Press. Retrieved from
 \bibitem[\citeproctext]{ref-whitehouse2023}
 Whitehouse, H, François, P, Savage, PE, \ldots{} Haar, B ter (2023)
 Testing the big gods hypothesis with global historical data: A review
-and {``}retake{''}. \emph{Religion, Brain \& Behavior}, \textbf{13}(2),
-124166.
+and retake. \emph{Religion, Brain \& Behavior}, \textbf{13}(2),
+124--166.
 
 \bibitem[\citeproctext]{ref-williams2021}
 Williams, NT, and Díaz, I (2021) \emph{{l}mtp: Non-parametric causal
